minor change to editTask route
